<?xml version="1.0"?>
<package format="3">
  <name>flask_admin</name>
  <version>0.0.0</version>
  <description>The flask_admin package</description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-flask</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-wtforms</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-flask</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-wtforms</exec_depend>
</package>
